# questarch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  leptosfmt.toml  package-lock.json  package.json  rust-toolchain.toml
docker/postgres/: Dockerfile  install_pg_uuidv7.sh  postgresql.conf
migrations/: 20250202003439_account.down.sql  20250202003439_account.up.sql
src/: app.rs  app_state.rs  key.rs  lib.rs  mail.rs  main.rs
src/components/: app.rs  login.rs  mod.rs  ui.rs
src/components/auth/: email.rs  login.rs  mod.rs  register.rs
src/server/: app_state.rs
src/ssr/: app_state.rs  cookie.rs  key.rs  mail.rs  mod.rs  uuid_codec.rs
